--- a/timeline.html
+++ b/timeline.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/timeline.css">
     <link rel="stylesheet" href="css/image-styles.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/stadium-styles.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -252,6 +253,44 @@
                         <div class="fact-card">
                             <div class="fact-label">Active Clubs</div>
                             <div class="fact-value">25+</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="sidebar-section">
+                    <h3>
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                            <circle cx="12" cy="10" r="3"></circle>
+                        </svg>
+                        Historic Stadiums
+                    </h3>
+                    <div class="stadium-showcase">
+                        <div class="stadium-card">
+                            <div class="stadium-image">
+                                <img src="images/stadiums/mandela-national-stadium.jpg" alt="Mandela National Stadium" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                                <div class="stadium-placeholder" style="display: none; background: linear-gradient(135deg, #0b6cff, #4f46e5); color: white; height: 80px; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; border-radius: 0.5rem;">
+                                    🏟️
+                                </div>
+                            </div>
+                            <div class="stadium-info">
+                                <h4>Mandela National Stadium</h4>
+                                <p><strong>1997</strong> • 45,000 capacity</p>
+                                <p class="stadium-desc">Uganda's premier football venue and home of the Cranes.</p>
+                            </div>
+                        </div>
+                        <div class="stadium-card">
+                            <div class="stadium-image">
+                                <img src="images/stadiums/nakivubo-stadium.jpg" alt="Wankulukuku Stadium" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                                <div class="stadium-placeholder" style="display: none; background: linear-gradient(135deg, #8b5cf6, #7c3aed); color: white; height: 80px; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; border-radius: 0.5rem;">
+                                    🏟️
+                                </div>
+                            </div>
+                            <div class="stadium-info">
+                                <h4>Wankulukuku Stadium</h4>
+                                <p><strong>1928</strong> • 10,000 capacity</p>
+                                <p class="stadium-desc">Historic home of SC Villa and Express FC.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
