--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/stadium-styles.css">
 </head>
 <body>
     <!-- Desktop Header -->
@@ -175,6 +176,47 @@
                     </div>
                     <div style="padding: 1rem; background: var(--bg-color); border-radius: 0.5rem; border-left: 3px solid var(--primary-color);">
                         <p style="margin: 0; color: var(--text-color); line-height: 1.6;">Wikipedia Contributors. (2024). <em>Football in Uganda</em>. Wikipedia, The Free Encyclopedia. Retrieved from https://en.wikipedia.org</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Featured Stadiums -->
+            <section class="content-card" style="margin-bottom: 3rem;">
+                <h2 style="color: var(--primary-color); margin-bottom: 1.5rem;">🏟️ Featured Stadiums</h2>
+                <p style="color: #6b7280; margin-bottom: 1.5rem; line-height: 1.7;">Explore the iconic venues that have hosted Uganda's greatest football moments and continue to be the heartbeat of the beautiful game.</p>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem;">
+                    <div style="border: 1px solid #e5e7eb; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <img src="images/stadiums/mandela-national-stadium.jpg" alt="Mandela National Stadium" style="width: 100%; height: 150px; object-fit: cover;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                        <div style="display: none; background: linear-gradient(135deg, #0b6cff, #4f46e5); color: white; height: 150px; display: flex; align-items: center; justify-content: center; font-size: 3rem;">
+                            🏟️
+                        </div>
+                        <div style="padding: 1rem;">
+                            <h4 style="color: var(--text-color); margin-bottom: 0.5rem;">Mandela National Stadium</h4>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin-bottom: 0.5rem;"><strong>Capacity:</strong> 45,000 • <strong>Opened:</strong> 1997</p>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">Uganda's premier football stadium and home of the national team.</p>
+                        </div>
+                    </div>
+                    <div style="border: 1px solid #e5e7eb; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <img src="images/stadiums/st.mary's-stadium.jpg" alt="St. Mary's Stadium Kitende" style="width: 100%; height: 150px; object-fit: cover;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                        <div style="display: none; background: linear-gradient(135deg, #10b981, #059669); color: white; height: 150px; display: flex; align-items: center; justify-content: center; font-size: 3rem;">
+                            🏟️
+                        </div>
+                        <div style="padding: 1rem;">
+                            <h4 style="color: var(--text-color); margin-bottom: 0.5rem;">St. Mary's Stadium Kitende</h4>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin-bottom: 0.5rem;"><strong>Capacity:</strong> 25,000 • <strong>Opened:</strong> 2017</p>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">Modern fortress and home of the mighty Vipers SC.</p>
+                        </div>
+                    </div>
+                    <div style="border: 1px solid #e5e7eb; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                        <img src="images/stadiums/nakivubo-stadium.jpg" alt="Wankulukuku Stadium" style="width: 100%; height: 150px; object-fit: cover;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                        <div style="display: none; background: linear-gradient(135deg, #8b5cf6, #7c3aed); color: white; height: 150px; display: flex; align-items: center; justify-content: center; font-size: 3rem;">
+                            🏟️
+                        </div>
+                        <div style="padding: 1rem;">
+                            <h4 style="color: var(--text-color); margin-bottom: 0.5rem;">Wankulukuku Stadium</h4>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin-bottom: 0.5rem;"><strong>Capacity:</strong> 10,000 • <strong>Opened:</strong> 1928</p>
+                            <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">Historic home of SC Villa and Express FC with rich tradition.</p>
+                        </div>
                     </div>
                 </div>
             </section>
