--- a/players.html
+++ b/players.html
@@ -13,6 +13,7 @@
   <!-- Page-specific styles -->
   <link rel="stylesheet" href="css/players.css" />
   <link rel="stylesheet" href="css/image-styles.css" />
+  <link rel="stylesheet" href="css/stadium-styles.css" />
 </head>
 <body class="players-page">
   <div class="container">
@@ -96,6 +97,21 @@
           <h3 id="media-heading" class="heading">Media</h3>
           <p class="muted">Social: <a id="player-twitter" href="#">@player</a></p>
           <p class="muted">Highlights: <a id="player-highlights" href="#">Watch</a></p>
+        </div>
+
+        <div class="card" style="margin-top:12px" aria-labelledby="stadium-heading">
+          <h3 id="stadium-heading" class="heading">Home Stadium</h3>
+          <div class="player-stadium-info" id="playerStadium">
+            <div class="stadium-image">
+              <img src="images/stadiums/kcca-omondi-stadium.jpg" alt="Player Home Stadium" style="width: 100%; height: 100px; object-fit: cover; border-radius: 0.5rem; margin-bottom: 0.5rem;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex'">
+              <div style="display: none; background: linear-gradient(135deg, #0b6cff, #4f46e5); color: white; height: 100px; display: flex; align-items: center; justify-content: center; font-size: 2rem; border-radius: 0.5rem; margin-bottom: 0.5rem;">
+                🏟️
+              </div>
+            </div>
+            <p class="muted">Stadium: <strong id="stadium-name">Phillip Omondi Stadium</strong></p>
+            <p class="muted">Capacity: <strong id="stadium-capacity">10,000</strong></p>
+            <p class="muted">Location: <strong id="stadium-location">Lugogo, Kampala</strong></p>
+          </div>
         </div>
       </aside>
     </div>
